<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <FrameLayout
        android:id="@+id/drawing_fl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pallet_ll"
        >

        <ImageView
            android:id = "@+id/background_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_image"
            tools:src="@drawable/frog_fountain"
            android:scaleType="centerCrop"
            />
    <edu.tcu.quynhtdong.paint.DrawingView
        android:id = "@+id/drawing_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tint_color"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/pallet_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/drawing_fl"
        app:layout_constraintBottom_toBottomOf="@id/func_ll"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/black"
            android:src="@drawable/path_color_selected"
            android:background="@color/black"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/red"
            android:src="@drawable/path_color_normal"
            android:background="@color/red_color"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/green"
            android:src="@drawable/path_color_normal"
            android:background="@color/green_color"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/blue"
            android:src="@drawable/path_color_normal"
            android:background="@color/blue_color"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/purple"
            android:src="@drawable/path_color_normal"
            android:background="@color/purple_color"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/white"
            android:src="@drawable/path_color_normal"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/func_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/pallet_ll"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:id="@+id/brush_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:contentDescription="@string/save_icon"
            android:src="@drawable/ic_brush"
            android:background="@color/light_gray"
            android:scaleType="centerCrop"/>
        <ImageView
            android:id="@+id/gallery_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:contentDescription="@string/gallery_icon"
            android:src="@drawable/ic_gallery"
            android:background="@color/light_gray"
            android:scaleType="centerCrop"/>
        <ImageView
            android:id="@+id/undo_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:contentDescription="@string/undo_icon"
            android:src="@drawable/ic_undo"
            android:background="@color/light_gray"
            android:scaleType="centerCrop"/>
        <ImageView
            android:id="@+id/save_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:contentDescription="@string/save_icon"
            android:src="@drawable/ic_save"
            android:background="@color/light_gray"
            android:scaleType="centerCrop"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>